--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,9 @@ phases:
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
 
+  install:
+    runtime-versions:
+      java: corretto17
 
   build:
     commands:
